# screenshot-mcp

./: LICENSE  README.md  pyproject.toml
screenshot_mcp/: server.py
