[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenshot-mcp"
version = "0.1.0"
description = "MCP server for capturing screenshots of desktop windows (Windows)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "Pillow>=10.0.0",
    "pywin32>=306",
]

[project.scripts]
screenshot-mcp = "screenshot_mcp.server:main"
